# RG136-chess

./: Bishop.cc  CMakeLists.txt  Chess  ChessPiece.cc  ChessPiece.cpp  Chess_gcov  Chessboard.cc  Field.cc  Game.cc  King.cc  Knight.cc  Makefile  Move.cc  ObjHandler.cc  Pawn.cc  Queen.cc  README.md  Rook.cc  chess.hpp  chessLogic.cc  chessLogic.hpp  coverage.info  index.html  main.cc
Pieces 3D/: attribution.md  bishop.mtl  king.mtl  knight.mtl  pawn.mtl  queen.mtl  rook.mtl
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/RG136-chess/: Bishop.cc.func-sort-c.html  Bishop.cc.func.html  Bishop.cc.gcov.html  ChessPiece.cc.func-sort-c.html  ChessPiece.cc.func.html  ChessPiece.cc.gcov.html  Chessboard.cc.func-sort-c.html  Chessboard.cc.func.html  Chessboard.cc.gcov.html  Field.cc.func-sort-c.html  Field.cc.func.html  Field.cc.gcov.html  Game.cc.func-sort-c.html  Game.cc.func.html  Game.cc.gcov.html  King.cc.func-sort-c.html  King.cc.func.html  King.cc.gcov.html  Knight.cc.func-sort-c.html  Knight.cc.func.html  Knight.cc.gcov.html  Move.cc.func-sort-c.html  Move.cc.func.html  Move.cc.gcov.html  ObjHandler.cc.func-sort-c.html  ObjHandler.cc.func.html  ObjHandler.cc.gcov.html  Pawn.cc.func-sort-c.html  Pawn.cc.func.html  Pawn.cc.gcov.html  Queen.cc.func-sort-c.html  Queen.cc.func.html  Queen.cc.gcov.html  Rook.cc.func-sort-c.html  Rook.cc.func.html  Rook.cc.gcov.html  chess.hpp.func-sort-c.html  chess.hpp.func.html  chess.hpp.gcov.html  index-sort-f.html  (+5 more)
coverage/usr/include/c++/7/: index-sort-f.html  index-sort-l.html  index.html  iostream.func.html  (+8 more)
(+72 files in other folders)
